RESOLVED FIXED81565
GC should not attempt to clear LLInt instruction inline caches for code blocks that are in the process of being generated
https://bugs.webkit.org/show_bug.cgi?id=81565
Summary GC should not attempt to clear LLInt instruction inline caches for code block...
Filip Pizlo
Reported 2012-03-19 14:38:01 PDT
Patch forthcoming.
Attachments
the patch (1.56 KB, patch)
2012-03-19 14:40 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-03-19 14:40:18 PDT
Created attachment 132675 [details] the patch
Filip Pizlo
Comment 2 2012-03-19 16:02:24 PDT
Note You need to log in before you can comment on or make changes to this bug.