GC should not attempt to clear LLInt instruction inline caches for code blocks that are in the process of being generated https://bugs.webkit.org/show_bug.cgi?id=81565

Reviewed by Oliver Hunt.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::finalizeUnconditionally):



Canonical link: https://commits.webkit.org/98801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111264 268f45cc-cd09-0410-ab3c-d52691b4dbfc